--- a/book.toml
+++ b/book.toml
@@ -8,3 +8,10 @@ title = "大李敖全集"
 [preprocessor.toc]
 command = "mdbook-toc"
 renderer = ["html"]
+
+[preprocessor.open-on-gh]
+command = "mdbook-open-on-gh"
+renderer = ["html"]
+
+[output.html]
+git-repository-url = "https://github.com/whatot/leeao"
