--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build
-        run: mdbook build
+        run: ./.github/actions/build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
