--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,18 +7,21 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v1
+        with:
+          mdbook-version: 'latest'
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: cargo install mdbook
       - run: cargo install mdbook-toc
-      - run: cargo install mdbook-epub
       - run: cargo install mdbook-open-on-gh
 
       - name: Build
