fix print,search config

--- a/book.toml
+++ b/book.toml
@@ -15,7 +15,11 @@ renderer = ["html"]
 
 [output.html]
 git-repository-url = "https://github.com/whatot/leeao"
+
+[output.html.print]
 # print超过github上限50MB，于是默认关闭
-print = false
+enable = false
+
+[output.html.search]
 # search超过github上限100MB，于是默认关闭
-search = false
+enable = false
